[gd_scene format=3 uid="uid://cowuefv1m5r84"]

[ext_resource type="Script" uid="uid://cycgnh6he0rs1" path="res://Scene/login.gd" id="1_18a72"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tajqu"]

[sub_resource type="LabelSettings" id="LabelSettings_tajqu"]
font_size = 80
font_color = Color(0.9019608, 0.4862745, 0.21176471, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cau7c"]

[sub_resource type="LabelSettings" id="LabelSettings_cau7c"]
font_size = 48
font_color = Color(0.14333999, 0.14333999, 0.14333999, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3n56f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xlo4h"]
bg_color = Color(0.8220193, 0.42422596, 0.14826378, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xlo4h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bvvwm"]

[sub_resource type="LabelSettings" id="LabelSettings_3n56f"]
font_size = 48
font_color = Color(0.14333999, 0.14333999, 0.14333999, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6hqeh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bvvwm"]
bg_color = Color(0.8220193, 0.42422596, 0.14826378, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_edd8a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eqty5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ma4wh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tajqu"]
bg_color = Color(0.9015185, 0.48548663, 0.2124277, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cau7c"]
bg_color = Color(0.6392157, 0.2509804, 0.05490196, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3n56f"]
bg_color = Color(0.8220193, 0.42422596, 0.14826378, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0s12h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xwwoh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6hqeh"]
bg_color = Color(0.93333334, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_edd8a"]
bg_color = Color(0.4128974, 8.8440254e-07, 2.4065375e-08, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eqty5"]
bg_color = Color(0.6375517, 2.3223088e-06, 2.8878452e-07, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0trqi"]

[node name="Login" type="Control" unique_id=461581337]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_18a72")

[node name="BackLogin" type="ColorRect" parent="." unique_id=2086093186]
layout_mode = 0
offset_right = 719.0
offset_bottom = 1284.0

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1701064946]
layout_mode = 0
offset_right = 719.0
offset_bottom = 1291.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer" unique_id=1619127876]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_tajqu")

[node name="Label" type="Label" parent="VBoxContainer" unique_id=358814347]
layout_mode = 2
size_flags_horizontal = 4
text = "WELCOME!"
label_settings = SubResource("LabelSettings_tajqu")

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer" unique_id=1130025907]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_cau7c")

[node name="Label2" type="Label" parent="VBoxContainer" unique_id=613284789]
layout_mode = 2
text = "Enter email"
label_settings = SubResource("LabelSettings_cau7c")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" unique_id=1526550231]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer" unique_id=1582401423]
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_3n56f")

[node name="InputCorreo" type="LineEdit" parent="VBoxContainer/HBoxContainer" unique_id=1790668073]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_xlo4h")
placeholder_text = "usuario@ejemplo.com"
max_length = 30

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/HBoxContainer" unique_id=579039166]
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_xlo4h")

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer" unique_id=511896256]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_bvvwm")

[node name="Label3" type="Label" parent="VBoxContainer" unique_id=587024152]
layout_mode = 2
text = "Enter password"
label_settings = SubResource("LabelSettings_3n56f")
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer" unique_id=759659880]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer2" unique_id=1596752283]
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_6hqeh")

[node name="InputPassword" type="LineEdit" parent="VBoxContainer/HBoxContainer2" unique_id=75571027]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_bvvwm")
max_length = 30
secret = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/HBoxContainer2" unique_id=972611799]
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_edd8a")

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer" unique_id=385709111]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_eqty5")

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer" unique_id=847465231]
custom_minimum_size = Vector2(0, 102)
layout_mode = 2
size_flags_vertical = 4

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer3" unique_id=1278223812]
custom_minimum_size = Vector2(164, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_ma4wh")

[node name="InicioSesionBT" type="Button" parent="VBoxContainer/HBoxContainer3" unique_id=1153366417]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 13
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxFlat_tajqu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cau7c")
theme_override_styles/hover = SubResource("StyleBoxFlat_3n56f")
action_mode = 0
text = "Login"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/HBoxContainer3" unique_id=1798337789]
custom_minimum_size = Vector2(86, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_0s12h")

[node name="SignUPBT" type="Button" parent="VBoxContainer/HBoxContainer3" unique_id=1508920054]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 13
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxFlat_tajqu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cau7c")
theme_override_styles/hover = SubResource("StyleBoxFlat_3n56f")
action_mode = 0
text = "SignUP"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer/HBoxContainer3" unique_id=1211998113]
custom_minimum_size = Vector2(164, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_0s12h")

[node name="HSeparator6" type="HSeparator" parent="VBoxContainer" unique_id=647768005]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_xwwoh")

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer" unique_id=1683040447]
custom_minimum_size = Vector2(0, 78)
layout_mode = 2
size_flags_vertical = 4

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer4" unique_id=1887251723]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_ma4wh")

[node name="CerrarBT" type="Button" parent="VBoxContainer/HBoxContainer4" unique_id=679190838]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 13
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_6hqeh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_edd8a")
theme_override_styles/hover = SubResource("StyleBoxFlat_eqty5")
action_mode = 0
text = "CLOSE"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/HBoxContainer4" unique_id=518811232]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_0s12h")

[node name="HSeparator5" type="HSeparator" parent="VBoxContainer" unique_id=1963208490]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_0trqi")

[node name="ColorRect" type="ColorRect" parent="VBoxContainer" unique_id=321666096]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.9015185, 0.48548663, 0.2124277, 1)

[connection signal="pressed" from="VBoxContainer/HBoxContainer3/InicioSesionBT" to="." method="_on_inicio_sesion_bt_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/SignUPBT" to="." method="_on_inicio_sesion_bt_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/SignUPBT" to="." method="_on_sign_upbt_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer4/CerrarBT" to="." method="_on_cerrar_bt_pressed"]
